[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_left = 0.33
anchor_right = 0.66
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 337.0
margin_bottom = 234.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "Return"

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 238.0
margin_right = 337.0
margin_bottom = 298.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 337.0
margin_bottom = 362.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 366.0
margin_right = 337.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 1 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
